2008-05-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (tile-left-space-layout): New layout.
	(tile-left-layout, tile-right-layout, tile-top-layout)
	(tile-bottom-layout): Use all the frame space when there is only
	one child.

	* src/clfswm-internal.lisp (place-window-from-hints): Center
	unmanaged windows in the root screen.

	* src/clfswm-nw-hooks.lisp (clear-nw-hook, clear-all-nw-hooks):
	new functions.

2008-05-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (current-frame-manage-window-type): Fix a
	typo in managed types.

	* src/clfswm-internal.lisp (show-child): Always display frame info
	even if the frame is hidden.

	* src/xlib-util.lisp (resize-window): Use a better algorithme to
	resize windows.

2008-05-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (with-movement): Display frame info for all
	frames in current root.

2008-05-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/*.lisp: Rename 'brother' frames to 'sister' frames.

	* src/bindings-second-mode.lisp (define-second-key #\a): New
	binding on 'add-default-frame'.

	* src/clfswm-autodoc.lisp (produce-*-doc-*-in-file): Show a
	message to follow the autodocumentation process.

2008-05-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (bind-or-jump): Bind "Tab", "Return" and
	"Space" to jump to a child. "B" to bind a slot on the current
	child.

	* src/bindings-second-mode.lisp: Use "Tab" instead of
	"Iso_Left_Tab".

2008-05-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (find-child-under-mouse): Take care of
	unmanaged (hidden) windows.

	* src/clfswm-internal.lisp (place-window-from-hints): Give a
	minimal size for windows.
	(with-all-windows-frames-and-parent): New function.

	* src/config.lisp (*default-window-width/height*): New parameters.

	* src/clfswm-internal.lisp (place-window-from-hints): Center